// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Onboarding component Snapshots should render null  - @testing-library/react 1`] = `<DocumentFragment />`;

exports[`Onboarding component Snapshots should render null - react-test-renderer 1`] = `null`;

exports[`Onboarding component Snapshots should render snapshot - @testing-library/react 1`] = `
<DocumentFragment>
  <div>
    <img
      alt="onboarding-img"
      class="slideShow-image"
      src="https://thumb.canalplus.pro/bran/unsafe/450x200/image/44/1/1_onboarding.59441.jpg"
    />
    <button>
      Next
    </button>
    <button>
      Leave
    </button>
  </div>
</DocumentFragment>
`;

exports[`Onboarding component Snapshots should render snapshot - react-test-renderer 1`] = `
<div>
  <img
    alt="onboarding-img"
    className="slideShow-image"
    src="https://thumb.canalplus.pro/bran/unsafe/450x200/image/44/1/1_onboarding.59441.jpg"
  />
  <button
    onClick={[Function]}
  >
    Next
  </button>
  <button
    onClick={[Function]}
  >
    Leave
  </button>
</div>
`;
